# iris-distro

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Readme.md  WORKSPACE  add_matlab_unit_tests.pl  cdd.patch  compute_obstacle_planes.m  externals_config.cmake  glib.cmake  inflate_region.m  inflation_results.m  install_prereqs.sh  install_prereqs_python_3.sh  iris.sublime-project  irispy_exploration.ipynb  lcmtypes.cmake  lic.enc  license.txt  matlab_clean.pl  matlab_pods.cmake  maximize_ellipse_in_polyhedron.m  mex.cmake  pad_obstacle_points.m  pods.cmake  push_externals.sh  push_iris.sh  push_subs.sh  python_requirements.txt  requirements.txt  sample_convex_polytope.m  test_ppl.cpp  tobuild.txt  totest.txt
+cspace/: cspace3.m  project_c_space_region.m
+drawing/: animate_results.m  drawPolyFromVertices.m  draw_2d.m  draw_3d.m  draw_Nd.m  intersect_obs_with_plane.m  project_c_space_region.m
+iris/: maximize_ellipse_in_polyhedron.m  py_lownerjohn_inner.m
+terrain_grid/: inflate_grid_region.m
+test/: plot_timing_results.m  test_c_space_3d.m  test_grid_2d.m  test_points_2d.m  test_poly_2d.m  test_poly_3d.m  test_poly_Nd.m  test_poly_selection_2d.m  test_polygon_recovery.m  test_simple_poly_2d.m  test_terrain.m  test_timing.m
+util/: transformed_normal.m
c/: Makefile  sdo1.c
cmake/: DrakeUseSWIG.cmake  FindSWIG.cmake  SwigMatlab.cmake  SwigPython.cmake  UseSWIGMatlab.cmake  matlab_pods.cmake
configurations/: cdd_only.cmake  no_externals.cmake  (+1 more)
cvxgen/: CMakeLists.txt  Makefile  csolve.c  cvxgen_ldp.c  cvxgen_ldp.cpp  cvxgen_ldp.h  cvxgen_ldp_mex.c  make_csolve.m  matrix_support.c  solver.c  testsolver
cvxgen/.ipynb_checkpoints/: test_cvxgen-checkpoint.ipynb
deprecated/matlab/+iris/: CMakeLists.txt
iris/: .gitignore  CMakeLists.txt  Readme.md
iris-externals/: CMakeLists.txt  README.md
iris/cmake/: mex.cmake
iris/cvxgen/: CMakeLists.txt  cvxgen_ldp.cpp  cvxgen_ldp.h  cvxgen_ldp.hpp  ldl.c  test_cvxgen.ipynb  testsolver.c
iris/cython/irispy/: __init__.py  iriscore.cpp  iriscore.pyx
iris/cython/irispy/test/: test_ellipsoid.py
iris/deprecated/: iris_terrain.ipynb
iris/deprecated/cython/: CMakeLists.txt
iris/deprecated/cython/irispy/: setup.py
iris/matlab/: addpath_iris.m
iris/matlab/+iris/: CMakeLists.txt  inflate_region.m  inflate_region_fallback.m  inflate_regionmex.cpp
iris/matlab/+iris/+inner_ellipsoid/: mosek_ellipsoid.m
iris/matlab/+iris/+terrain_grid/: Server.m
iris/matlab/+iris/+test/: test_poly_2d.m  test_poly_Nd.m  test_thin_ellipsoid_simple.m
iris/matlab/+iris/+util/: auto_seed_regions.m
iris/python/: CMakeLists.txt  iris_wrapper.i
iris/python/examples/: iris_2d.ipynb  polyhedrons.ipynb
iris/python/irispy/: .gitignore  CMakeLists.txt  Readme.md  __init__.py  drawing.py  extensions.py  iriscore.pxd  irispy.py  utils.py
iris/python/irispy/test/: cpp_wrapper_test.py  python_interface_test.py  test_ellipsoid.py  test_iris.py  test_iris_2d.py  test_iris_3d.py  test_polytope.py
iris/python/test/: cpp_wrapper_test.py  irispy_experiments.ipynb  python_interface_test.py
iris/src/: CMakeLists.txt  Ellipsoid.cpp  IRISProblem.cpp  Polyhedron.cpp  geometry.cpp  geometry.h  iris.cpp  iris.h  iris.hpp  iris_cdd.cpp  iris_classes.cpp  iris_demo.cpp  iris_mosek.cpp  iris_mosek.h  iris_mosek.hpp  iris_wrapper.cpp
iris/src/cvxgen/: cvxgen_ldp_mex.m  description.cvxgen
iris/src/test/: test_append_polyhedron.cpp  test_for_thin_mosek_ellipsoid_bug.cpp  test_iris.cpp  test_mosek_ellipsoid.cpp  test_required_containment.cpp  test_separating_hyperplanes.cpp  test_util.h
iris/swig/: CMakeLists.txt  cpp_wrapper_test.py  eigen.i  iris_wrapper.i  irispy_swig.i  irispy_swig_wrapper.py  numpy.i  python_interface_test.py  setup.py  swig_test.py
iris/swig/irispy/: __init__.py  drawing.py  irispy.py
iris/swigmake/cmake/: DrakeUseSWIG.cmake  FindSWIG.cmake  SwigMatlab.cmake  SwigPython.cmake  dummy.i
iris/swigmake/swig/: eigen.i
iris/swigmake/swig/python/: pycontainer.swg
python/: CMakeLists.txt  iris_terrain.ipynb  irispy_exploration.ipynb  mosek_exploration.ipynb
python/irispy/: CMakeLists.txt  __init__.py  cspace.py  eigen.pxd  gurobi_ldp.py  hyperplanes.py  iris.py  iriscore.cpp  iriscore.pxd  iriscore.pyx  iriscoretest.cpp  iriscoretest.pyx  ldp_cvxgen.py  ldp_gurobi.py  ldp_mosek.py  mosek_ldp.py  setup.py  terrain.py  utils.py
python/irispy/mosek/: matlab_wrapper.py
python/irispy/mosek_ellipsoid/: lownerjohn_ellipsoid.py  matlab_wrapper.py
python/irispy/test/: test_core.py  test_iris.py  test_polytope.py
src/: BUILD.bazel  CMakeLists.txt  Ellipsoid.cpp  Polytope.cpp  dbg.h  iris.c  iris.cpp  iris.h  iris.hpp  iris_cdd.cpp  iris_classes.cpp  iris_demo.cpp  iris_mosek.c  iris_mosek.cpp  iris_mosek.h  iris_mosek.hpp  iris_test.c  iris_test.cpp  iris_types.h  iris_types.hpp  iris_util.c  iris_util.h  iris_utils.hpp  test_cdd.cpp  test_iris.cpp  test_ppl.cpp
src/cxx/: CMakeLists.txt  IRISProblem.cpp  geometry.cpp  iris-config.cmake.in  iris.cpp  iris.pc.in  iris_cdd.cpp  iris_mosek.cpp  iris_wrapper.cpp
src/cxx/cvxgen/: .gitignore  CMakeLists.txt  cvxgen_ldp.c  cvxgen_ldp.cpp  cvxsolve.m  solver.h  util.c
src/cxx/iris/: iris_mosek.h
src/cxx/test/: CMakeLists.txt  test_append_polyhedron.cpp  test_cdd.cpp  test_closest_point.cpp  test_infeasible_ellipsoid.cpp  test_mosek_ellipsoid.cpp  test_ppl.cpp
src/matlab/: CMakeLists.txt
src/matlab/data/: example_heights.mat
src/python/: CMakeLists.txt
src/python/examples/: iris_2d.ipynb  polyhedrons.ipynb
src/python/irispy/: __init__.py  drawing.py  extensions.py  irispy.py
src/python/irispy/extensions/: ellipsoid.py  irisdebugdata.py  polyhedron.py
src/python/irispy/test/: cpp_wrapper_test.py  python_interface_test.py  test_cpp_exception.py  test_ellipsoid.py  test_iris.py  test_iris_2d.py  test_iris_3d.py  test_required_containment.py
src/test/: CMakeLists.txt  test_cdd.cpp  test_closest_point.cpp  test_infeasible_ellipsoid.cpp  test_iris.cpp  test_ppl.cpp  test_required_containment.cpp  test_separating_hyperplanes.cpp
(+108 files in other folders)
